2004-10-13  David Malcolm  <dmalcolm@redhat.com>

	* cong-menus.c: 

	Fixed a profane typo in the keybindings for Print Preview

	* cong-document.c: 

	Fixed a stupid bug in cong_document_can_print that made it always return FALSE

2004-10-13  Douglas Burke  <dburke@cfa.harvard.edu>
 
	* cong-file-export.c, cong-file-print.c, plugin-random.c

	Updated to use GtkComboBox rather than GtkOptionMenu.

	* cong-eel.c, cong-eel.h

	Removed the cong_eel_option_menu_get_selected_menu_item() function.
 
2004-10-12  Douglas Burke  <dburke@cfa.harvard.edu>
 
	* plugin-validate.c
 
 	The icon used when there is an error is now different than when
 	the document validates.
 	
2004-10-12  Douglas Burke  <dburke@cfa.harvard.edu>

	* cong_util.c, cong_util.h, popup.c

	Added separators back to the popup menus.

	* cong-menus.c

	Made the name of a separator tag unique.
 	
2004-10-11 Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* cong-file-save.c: Ask for replace of existing file.
	Fix for bug #154844.

2004-10-10  Dave Malcolm  <dmalcolm@redhat.com>

	* cong-plugin.c: 

	Cleanup the XML source of newly-created documents.

	* cong-source-layout.h, cong-source-layout.c: 

	Refactored the source layout cleanup so that it can be added to an
	existing command.

	* cong-document.c, cong-document.h: 

	Added a way to use a CongCommand as a preprocessing operation
	without it being added to the CongCommandHistory

2004-10-09  Dave Malcolm  <dmalcolm@redhat.com>

	* plugin-cleanup-source.c (Module): 
	
	Moved bulk of functionality into new cong-source-file.[ch] files
	
	* cong-source-layout.h:

	New file

	* cong-source-layout.c: 

	Ditto

2004-10-09  Michï¿½le Garoche  <michele.garoche@easyconnect.fr>

	* Makefile.am: 
 	
 	Remove reference to fo.h
 
2004-10-09  David Malcolm  <dmalcolm@redhat.com>

	* cong-document.c: 

	In cong_document_for_each_node_recurse, don't recurse below an ENTITY_REF into the
	ENTITY_DECL, to avoid reaching the nodes more than once, and to avoid infinite loops.
