@@ -23,6 +23,5 @@ GXX_STRUCT_END_ELEMENT()
 
 GXX_STRUCT_BEGIN_ELEMENT("header-info", CongDispspecElementHeaderInfo, header_info)
      GXX_STRUCT_ATTRIBUTE_STRING("xpath", xpath, FALSE, "")
-     GXX_STRUCT_ATTRIBUTE_STRING("tag", tagname, FALSE, "")
 GXX_STRUCT_END_ELEMENT()
 
