@@ -1,5 +1,10 @@
 2004-10-13  David Malcolm  <dmalcolm@redhat.com>
 
+	* cong-dispspec-element.c, cong-dispspec-element.h, cong-dispspec-element-gxx.h: 
+
+	Removed the tagname/childElement/tag confusion; everything should
+	now use xpath for getting at title information
+
 	* cong-menus.c: 
 
 	Fixed a profane typo in the keybindings for Print Preview
